--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
 }
-body,html{
+body{
     height: 100%;
     background-image: url("https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1405&q=80");
     background-size: cover;
@@ -44,22 +44,24 @@ nav div a{
 }
 /* hover滑入 */
 nav a:hover{
-    background-color: rgba(248, 185, 113, 0.589);
+    background-color: rgba(108, 180, 86, 0.589);
 }
 /* 內容區塊 */
 #content{
     width: 50%;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 #content a{
     border: 0.5px solid #fff;
-    padding:10px 15px;
-    background-color: rgba(248, 185, 113, 0.589);
+    padding:20px 30px;
+    background-color:  rgba(108, 180, 86, 0.589);
 }
 #content a:hover{
-    background-color: rgba(248, 185, 113, 0);
+    background-color: rgba(108, 180, 86, 0);
 }
-
+#content p{
+    margin: 30px 0;
+}
 /* 按鈕區塊 */
 #button{
     text-align: center;
@@ -67,8 +69,8 @@ nav a:hover{
 }
 #button a{
     border: 0.5px solid #fff;
-    padding:50px 50px;
-    background-color: rgba(248, 185, 113, 0.589);
+    padding:45px;
+    background-color: rgba(108, 180, 86, 0.589);
     height: 100px;
     width: 100px;
     /* bdra50p */
@@ -79,10 +81,10 @@ nav a:hover{
     margin-right: 100px;
 }
 #button a:hover{
-    background-color: rgba(248, 185, 113, 0);
+    background-color: rgba(108, 180, 86, 0);
 }
 footer{
-    background-color: rgba(248, 185, 113, 0.589);
+    background-color: rgba(108, 180, 86, 0.589);
     /* 定位:固定 */
     position: fixed;
     /* 底部距離:0 */
